Updated build numbers

--- a/README
+++ b/README
@@ -1,48 +1,47 @@
 Symphony 2
 ------------------------------------
 
-Version: 2.0.1 (build 271)
-Build Date: 28th January 2009
+Version: 2.0.2 (build 375)
+Build Date: 6th March 2009
 Github Repository: http://github.com/symphony/symphony-2/tree/optmisation
 
 
 [SYNOPSIS]
 
 Symphony is a PHP & MySQL based CMS that utilises XML and XSLT as it's core 
-technologies. This repository represents version 2.0.1 and is considered stable.
+technologies. This repository represents version 2.0.2 and is considered stable.
 
 Visit the forum at http://overture21.com/forum/ 
 
 
-** IMPORTANT NOTE FOR GIT USERS **
-If you intend on pulling the latest changes to update your copy of Symphony, be forewarned.
-There have been some major structural changes and doing so will remove parts of your 
-workspace folder. To get around this, move your workspace folder some place safe, along with
-any of the extensions mentioned below in the "INSTALLING FROM GIT" instructions. Once you have
-pulled the latest version, move the workspace folder back in place and use the following commands
+** See further down for installation instructions **
+
+[UPDATING VIA GIT]
+
+1. Use the following command to get Extensions up to date
 
 	git submodule init
 	git submodule update
 
-The workspace folder will no longer be under git version control, which allows the Symphony
-team to make alterations to the default theme without risking your ability to pull changes.
-	
-Finally, follow from step 4 below.
+Finally, follow from step 5 below.
 
 
 [UPDATING]
 
-Follow the instructions below if you are updating from Symphony version 2.0 (non Git)
+Follow the instructions below if you are updating from Symphony version 2.0.1 (non Git)
 
 1. Backup /symphony/.htaccess
 
 2. Upload /symphony, index.php & update.php, replacing what is already on your server.
 
-3. Put the backed up .htaccess file into the new /symphony folder
+3. (Optional) If you require the dynamic image manipulation features, removed as of this
+release, be sure up upload extensions/jit_image_manipulation.
 
-4. Go to http://yoursite.com/update.php to complete the update process.
+4. Put the backed up .htaccess file into the new /symphony folder
 
-5. Dance like it's 1999!
+5. Go to http://yoursite.com/update.php to complete the update process.
+
+6. Dance like it's 1999!
 
 
 
@@ -60,11 +59,13 @@ Follow the instructions below if you are updating from Symphony version 2.0 (non
 
 		- Maintenance Mode: http://github.com/pointybeard/maintenance_mode
 		
-		- Select Box Link Field: https://github.com/pointybeard/selectbox_link_field
+		- Select Box Link Field: http://github.com/pointybeard/selectbox_link_field
 		
 		- Export Ensemble: http://github.com/pointybeard/export_ensemble
 		
-		- Markdown: https://github.com/pointybeard/markdown
+		- Markdown: http://github.com/pointybeard/markdown
+		
+		- JIT Image Manipulation: http://github.com/pointybeard/jit_image_manipulation		
 		
 
 3. Run the following commands to ensure the submodules are cloned:
@@ -84,8 +85,6 @@ folder you just created:
 
 
 [INSTALLATION]
-
-** See further down for updating instructions **
 
 1. This step assumes you downloaded a zip archive from the Symphony website 
    (http://symphony21.com). Upload the following files and 
