--- a/README
+++ b/README
@@ -20,7 +20,7 @@ IMPORTANT!! The following is not apart of the installer/updater and must be done
 
 1. Be sure to run the following MySQL commands to get the new section navigation group functionality
 
-	ALTER TABLE  `sym_sections` ADD  `navigation_group` VARCHAR( 50 ) NOT NULL DEFAULT  'Publish';
+	ALTER TABLE  `sym_sections` ADD  `navigation_group` VARCHAR( 50 ) NOT NULL DEFAULT  'Content';
 	ALTER TABLE  `sym_sections` ADD INDEX (  `navigation_group` ) ;
 
 	Change `sym_ to match your table prefix value
